k8-deploy/prod/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pdx-validator-ingress
  namespace: pdxfinder-validator
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
    - host:
      http:
        paths:
          - path: /pdxfinder/prod(/|$)(.*)
            backend:
              serviceName: pdx-validator
              servicePort: 80
